ecmascript/parser/tests/typescript-errors/tsc/es6/Symbols/symbolProperty33/input.ts.stderr
error[1023]: An index signature parameter type must be either 'string' or 'number'
 --> $DIR/tests/typescript-errors/tsc/es6/Symbols/symbolProperty33/input.ts:8:9
  |
8 |     [s: symbol]: () => { x: string };
  |         ^^^^^^

